--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -45,6 +45,54 @@
 %div
   %div.mt-2
     %h1 Main Dashboard
+  %div.testTOCheck
+    %div.customerBox
+      %div
+        %p.boxesDashboardTtile New Costumers
+      %div.testTOCheck.pController
+        %div
+          %div 
+            Last Months
+          %div
+            %h3.bold-number-miniBoxes
+              349
+        %div.porcentageBox.flex-center
+          %div
+            = image_tag("increase1.png")
+          %div
+            %p.p0.pDashboard-miniBoxes +10.45%
+
+    %div.customerBox
+      %div
+        %p.boxesDashboardTtile Leads Accepted
+      %div.testTOCheck.pController
+        %div
+          %div 
+            Last Months
+          %div
+            %h3.bold-number-miniBoxes
+              349
+        %div.porcentageBox.flex-center
+          %div
+            = image_tag("increase1.png")
+          %div
+            %p.p0.pDashboard-miniBoxes +10.45%
+
+    %div.customerBox
+      %div
+        %p.boxesDashboardTtile Dealers Enrollment
+      %div.testTOCheck.pController
+        %div
+          %div 
+            Last Months
+          %div
+            %h3.bold-number-miniBoxes
+              349
+        %div.porcentageBox.flex-center
+          %div
+            = image_tag("increase1.png")
+          %div
+            %p.p0.pDashboard-miniBoxes +10.45%
   %div.testTOCheck.mt-2
     %div.testBox.mar-r
       %div.testTOCheck.p-15
