--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -939,6 +939,18 @@ font-size: 14px;
     margin-top: 5px;
 }
 
+.ovalStatusWon{
+  background-color: #e099f8;
+  border-radius: 20px;
+  text-align: center;
+  padding: 6px;
+    border-radius: 80px;
+    width: 90px;
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
 
 
 .flex{
