--- a/app/views/leads/_new.html.haml
+++ b/app/views/leads/_new.html.haml
@@ -24,6 +24,7 @@
     = link_to_cancel new_lead_path
 :javascript
   var closePopUpButton = document.getElementById('closePopUp');
+  console.log(closePopUpButton,"closePopUpButton")
 
   if (closePopUpButton) {
     closePopUpButton.addEventListener('click', function() {
