--- a/app/views/leads/index.html.haml
+++ b/app/views/leads/index.html.haml
@@ -20,7 +20,7 @@
 
 %div#editLeadPopup.popup
   %div.popup-content
-    = render 'edit', lead: @lead
+    -# = render 'edit', lead: @lead
 
 %div.leadsBoxContainer.mt-2
   = render 'entities/title_bar'
@@ -66,7 +66,9 @@
             %td= lead.created_at.strftime("%Y-%m-%d") # Adjust date format if needed
             %td= lead.assigned_to # Assuming assigned_to is the lead owner
             %td.edit-lead-link
-              = link_to_inline(:edit_lead, edit_lead_path(lead), text: t(:edit)) + " | "
+              = link_to_inline("edit_lead_#{lead.id}", edit_lead_path(lead), text: t('edit')) + " | "
+  -# %div
+  -#   = render 'leads/title_bar'
 #exampleModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", tabindex: "-1"}
   .modal-dialog
     .modal-content
@@ -178,13 +180,26 @@
 
   //edit js 
   editLinks.forEach(function(link) {
-  link.addEventListener('click', function(event) {
-    event.preventDefault();
-    editLeadPopup.classList.toggle('show');
-    console.log("Edit link clicked");  // Check if click event is detected
-    // Add your logic to open the popup here
-  });
-  });
+    link.addEventListener('click', function(event) {
+      event.preventDefault();
+      var url = this.href;
+
+      // Fetch edit form content via AJAX
+      fetch(url, {
+        method: 'GET',
+        headers: {
+          'X-Requested-With': 'XMLHttpRequest' // Set header for Rails to recognize AJAX request
+        }
+      })
+      .then(response => response.text())
+      .then(data => {
+        popupContent.innerHTML = data; // Insert fetched HTML into popup content
+        editLeadPopup.classList.add('show'); // Show the popup
+      })
+      .catch(error => console.error('Error fetching edit form:', error));
+    });
+    });
+
   if (closeEditLeadPopup) {
     closeEditLeadPopup.addEventListener('click', function() {
       editLeadPopup.classList.remove('show');
