--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -20,19 +20,21 @@ $color_footer: grey;
 //------------------------------------------------------------------------------
 #header {
   background: $color_header_background;
-  color: $color_header;
+  // color: $color_header;
   padding: 8px 16px 8px 16px;
   box-shadow: 0 4px 19.8px rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 2;
-  h3 a {
-    background: $color_header_background;
-    color: $color_logo;
-    font: normal 15px "Lucida Grande", Arial, Helvetica, sans-serif;
-    text-decoration: none; }
+  font-size: 16px;
+  // h3 a {
+  //   background: $color_header_background;
+  //   color: $color_logo;
+  //   font: normal 15px "Lucida Grande", Arial, Helvetica, sans-serif;
+  //   text-decoration: none; }
   #welcome {
-    float: right;
-    font-size: 11px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     a {
       color: rgb(0, 0, 0);
       padding: 1px 4px 2px 4px;
@@ -121,3 +123,23 @@ $color_footer: grey;
   font-size: 10px;
   padding: 0px 0px 0px 16px;
   text-align: center; }
+
+.al-item{
+  align-items: center;
+}
+
+.white{
+  color: #ffffff;
+}
+
+.fs-icon-14{
+  font-size: 14px;
+}
+
+.boldText{
+  font-weight: 900;
+}
+
+.lightText{
+  font-weight: 100;
+}
