--- a/app/views/campaigns/_edit.html.haml
+++ b/app/views/campaigns/_edit.html.haml
@@ -1,6 +1,6 @@
 .remote
   = simple_form_for(@campaign, html: one_submit_only, remote: true) do |f|
-    = link_to_close edit_campaign_path(@campaign)
+    = link_to_close(edit_campaign_path, 'closePopUp')
     = f.hidden_field :user_id
 
     = f.error_messages object_name: t('campaign')
@@ -14,5 +14,19 @@
 
     .buttonbar
       = f.submit t(:save_campaign), class: 'btn btn-primary'
-      #{t :or}
-      = link_to_cancel edit_campaign_path(@campaign)
+      -# #{t :or}
+      -# = link_to_cancel edit_campaign_path(@campaign)
+:javascript
+  var closePopUpButton = document.getElementById('closePopUp');
+  console.log(closePopUpButton,"closePopUpButton")
+
+  if (closePopUpButton) {
+    closePopUpButton.addEventListener('click', function() {
+      var popupContainer = document.getElementById('editCampaignPopup');
+      if (popupContainer) {
+        console.log(popupContainer);
+        popupContainer.classList.remove('show');
+        console.log("Popup closed");
+      }
+    });
+  }
