--- a/app/views/entities/_title_bar.html.haml
+++ b/app/views/entities/_title_bar.html.haml
@@ -4,7 +4,7 @@
   .title_tools
     #buttons
       = view_buttons
-    .create_asset#collapsePopUp
+    .create_asset{ data: { target: "#popupContainer#{model_name.camelcase}" } }
       = link_to_inline("create_#{model_name}".to_sym, send("new_#{model_name}_path"), {text: t("create_#{model_name}".to_sym), class: 'btn-sm btn btn-outline-primary'})
   %div
     %input.heightInputsCustom.newCustomButton{ placeholder: "Search Lead" }
@@ -13,18 +13,18 @@
 -#   = image_tag("loading.gif", size: :thumb, id: "loading", style: "display: none;")
 :javascript
   document.addEventListener('DOMContentLoaded', function() {
-  console.log("DOM fully loaded and parsed");
+   document.querySelectorAll('.create_asset').forEach(function(button) {
+      button.addEventListener('click', function(event) {
+        event.preventDefault();
+        var targetPopupSelector = button.getAttribute('data-target');
+        var targetPopup = document.querySelector(targetPopupSelector);
 
-  var openCreateLead = document.getElementById('collapsePopUp');
-  var popupContainer = document.getElementById('popupContainer');
-
-  if (openCreateLead && popupContainer) {
-    openCreateLead.addEventListener('click', function(event) {
-      event.preventDefault();
-      popupContainer.classList.toggle('show');
-      console.log("Toggled popup visibility");
+        if (targetPopup) {
+          targetPopup.classList.toggle('show');
+          console.log(`Toggled visibility for ${targetPopupSelector}`);
+        } else {
+          console.log("Target popup not found");
+        }
+      });
     });
-  } else {
-    console.log("Elements not found");
-  }
   });
