--- a/app/views/leads/_edit.html.haml
+++ b/app/views/leads/_edit.html.haml
@@ -1,5 +1,6 @@
 .remote
   = simple_form_for(@lead, html: one_submit_only, remote: true, multipart: true, authenticity_token: true) do |f|
+    = link_to_close(edit_lead_path, 'closePopUp')
     = f.hidden_field :user_id
 
     = f.error_messages object_name: t('lead')
@@ -19,5 +20,19 @@
         = f.submit t(:save_lead), onclick: "crm.clear_all_hints()", class: 'btn btn-primary'
       - else
         = f.submit t(:save_lead), class: 'btn btn-primary'
-      #{t :or}
-      = link_to_cancel edit_lead_path(@lead)
+      -# #{t :or}
+      -# = link_to_close(edit_lead_path, 'closePopUp')
+:javascript
+  var closePopUpButton = document.getElementById('closePopUp');
+  console.log(closePopUpButton,"closePopUpButton")
+
+  if (closePopUpButton) {
+    closePopUpButton.addEventListener('click', function() {
+      var popupContainer = document.getElementById('editLeadPopup');
+      if (popupContainer) {
+        console.log(popupContainer);
+        popupContainer.classList.remove('show');
+        console.log("Popup closed");
+      }
+    });
+  }
