cleaning small things on the forms

--- a/app/views/campaigns/index.html.haml
+++ b/app/views/campaigns/index.html.haml
@@ -7,11 +7,11 @@
 %div.mt-2
   %h1 CAMPAIGNS
 %div#popupContainerCampaign.popup
-  %div.popup-contentCamp
+  %div.popup-contentCamp.mt-2
     .remote#create_campaign{ hidden }
 
 %div#editCampaignPopup.popup
-  %div.popup-content
+  %div.popup-content.mt-2
     %div#edit_campaign{ hidden }
   
 -# .list#campaigns
