--- a/app/views/leads/index.html.haml
+++ b/app/views/leads/index.html.haml
@@ -14,12 +14,12 @@
 %div.mt-2
   %h1 LEADS
 
-%div#popupContainerLead.popup
-  %div.popup-content
+%div#popupContainerLead.popup.scrollPop-up
+  %div.popup-content.mt-2
     .remote#create_lead{ hidden }
 
-%div#editLeadPopup.popup
-  %div.popup-content
+%div#editLeadPopup.popup.scrollPop-up
+  %div.popup-content.mt-2
     %div#edit_lead{ hidden }
 
 %div.leadsBoxContainer.mt-2
