--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -36,13 +36,17 @@ $sidebar_width: 210px;
 .subtitle {
   border-bottom: 1px #eee solid;
   color: #2f2f2f;
+  height:40px;
+  margin-top: 10px;
   font: {
     size: 14px;
     weight: bold; };
   small {
     font-weight: normal;
     font-size: 0.9em;
-    padding-left: 5px; }
+    border: 1px solid black;
+    padding: 6px 10px;
+    border-radius: 100%; }
   a:link, a:visited {
     color: $color_subtitle;
     text-decoration: none; }
@@ -1163,4 +1167,28 @@ font-size: 14px;
 .bold-number-miniBoxes{
   font-size: 30px;
   font-weight: bold;
+}
+
+.scrollPop-up{
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.select2{
+  margin-top: 07px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  color: #444;
+  line-height: 28px;
+  background-color: #E9E9E9 !important;
+  height: 35px !important;
+  border: 1px solid #909090 !important;
+  border-radius: 5px;
+}
+
+.select2-container--default .select2-selection--single {
+  background-color: #fff;
+  border: none !important;
+  border-radius: 4px;
 }
