--- a/app/views/leads/_new.html.haml
+++ b/app/views/leads/_new.html.haml
@@ -17,9 +17,9 @@
 
   .buttonbar
     - if Setting.compound_address
-      = f.submit t(:create_lead), onclick: "crm.clear_all_hints()", class: 'btn btn-primary'
+      = f.submit t(:create_lead), onclick: "crm.clear_all_hints()", class: 'btn btn-primary mt-2'
     - else
-      = f.submit t(:create_lead), class: 'btn btn-primary'
+      = f.submit t(:create_lead), class: 'btn btn-primary mt-2'
     -# #{t :or}
     -# = link_to_cancel new_lead_path
 :javascript
