trying to add reminders and styling reminders secction on modal!

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1192,3 +1192,31 @@ font-size: 14px;
   border: none !important;
   border-radius: 4px;
 }
+
+.dateReminder{
+  width: 240px;
+}
+
+.dateType{
+  margin-left: 10px;
+}
+
+.reminderInput{
+  width: 245px  !important;
+}
+
+.reminiderFlex{
+  display: flex;
+}
+
+.reminder-fields{
+  padding: 20px 0px;
+}
+
+.reminderInputStatus{
+  width: 500px;
+}
+
+.mt-5px{
+  margin-top: 5px;
+}
