--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1220,3 +1220,58 @@ font-size: 14px;
 .mt-5px{
   margin-top: 5px;
 }
+
+.customerFlex{
+  display: flex;
+  justify-content: space-between;
+}
+
+.mobile-mt-2{
+  margin-top: 0px;
+}
+
+.mt-5{
+  margin-top: 50px;
+}
+
+@media(max-width: 991px){
+  .testTOCheck {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .customerBox{
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    width: 100%;
+    height: 150px;
+    margin-top: 20px;
+    border-radius: 10px;
+  }
+
+  .testBox {
+    background-color: white;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    width: 95%;
+    height: auto;
+    border-radius: 10px;
+    padding: 22px;
+}
+
+.mobile-mt-2{
+  margin-top: 20px;
+}
+
+.testBoxLarge {
+  background-color: white;
+  box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
+  width: 96.5%;
+  height: auto;
+  border-radius: 10px;
+  padding-bottom: 20px;
+}
+
+.mt-5{
+  margin-top: 0px;
+}
+}
