--- a/app/views/campaigns/index.html.haml
+++ b/app/views/campaigns/index.html.haml
@@ -64,10 +64,9 @@
             %td.p-14= campaign.ends_on # Assuming assigned_to is the lead owner
             %td.p-14= campaign.target_leads
             %td.p-14= campaign.status
-            %td.p-14.edit-campaign-link
-              = link_to_inline(:edit_campaign, edit_campaign_path(campaign), text: t(:edit)) + " | "
-              -# = link_to 'Edit', edit_campaing_path(campaign) # Adjust link path as needed
-              -# = link_to 'Delete', edit_campaing_path(campaign), method: :delete, data: { confirm: 'Are you sure?' } 
+            %td.p-14
+              = link_to_inline(:edit_campaign, edit_campaign_path(campaign), text: t(:edit), class: "edit-campaign-link") + " | "
+              = link_to_delete(campaign, confirm: t(:are_you_sure))
 
 #exampleModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", tabindex: "-1"}
   .modal-dialog
